# biosaka

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  DEVGLOG.md  HEDEFLER.md  LICENSE  README.md  STARDENCE_DEVLOG.md  build.rs  logo.txt  neurons.csv  run.sh  synapses.csv
aur/: .SRCINFO  .gitignore  PKGBUILD
src/: generated.rs  main.rs
src/connectome/: mod.rs
src/simulation/: mod.rs
src/tui/: mod.rs
src/worm/: mod.rs
