[package]
name = "biosaka"
version = "0.2.1"
edition = "2021"
description = "C. elegans dual-sex neural simulation — herm 307n/2847e, male 379n/3159e, LIF spiking, ratatui TUI"
license = "MIT"
repository = "https://github.com/BerkeOruc/biosaka"
homepage = "https://github.com/BerkeOruc/biosaka"
keywords = ["neural", "simulation", "c-elegans", "connectome", "tui"]
categories = ["simulation", "science"]

[[bin]]
name = "biosaka"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
